fix(style): blog title invisible issue

--- a/src/components/blog-overview/blog.module.less
+++ b/src/components/blog-overview/blog.module.less
@@ -10,6 +10,8 @@
 	margin-top: 0 !important;
 
 	a {
+		width: 100% !important;
+		opacity: 1 !important;
 		color: var(--color-link);
 	}
 }
